--- a/MongoDB.Web/Resources/ProviderResources.resx
+++ b/MongoDB.Web/Resources/ProviderResources.resx
@@ -120,10 +120,7 @@
   <data name="Membership_PasswordFormatNotSupported" xml:space="preserve">
     <value>Password format '{0}' not supported.</value>
   </data>
-  <data name="Membership_ProviderAlreadyInitialized" xml:space="preserve">
-    <value>An attempt is made to call Initialize on a provider after the provider has already been initialized.</value>
-  </data>
-  <data name="Membership_ProviderNameHasZeroLength" xml:space="preserve">
+  <data name="Common_ProviderNameHasZeroLength" xml:space="preserve">
     <value>The name of the provider has a length of zero.</value>
   </data>
   <data name="Membership_CannotRetrievePasswords" xml:space="preserve">
@@ -168,25 +165,25 @@
   <data name="Membership_UserHasADuplicateEmailAddress" xml:space="preserve">
     <value>User has a duplicate e-mail address.</value>
   </data>
-  <data name="Membership_UserNameCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">User name cannot be null or white space.</value>
+  <data name="Membership_UserNameCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>User name cannot be null or white space.</value>
   </data>
-  <data name="Membership_PasswordAnswerCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">Password answer cannot be null or white space.</value>
+  <data name="Membership_PasswordAnswerCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>Password answer cannot be null or white space.</value>
   </data>
-  <data name="Membership_PasswordCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">Password cannot be null or white space.</value>
+  <data name="Membership_PasswordCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>Password cannot be null or white space.</value>
   </data>
-  <data name="Membership_OldPasswordCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">Old password cannot be null or white space.</value>
+  <data name="Membership_OldPasswordCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>Old password cannot be null or white space.</value>
   </data>
-  <data name="Membership_NewPasswordCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">New password cannot be null or white space.</value>
+  <data name="Membership_NewPasswordCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>New password cannot be null or white space.</value>
   </data>
-  <data name="Membership_NewPasswordQuestionCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">New password question cannot be null or white space.</value>
+  <data name="Membership_NewPasswordQuestionCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>New password question cannot be null or white space.</value>
   </data>
-  <data name="Membership_NewPasswordAnswerCannotBeNullOrWhiteSpace">
-    <value xml:space="preserve">New password answer cannot be null or white space.</value>
+  <data name="Membership_NewPasswordAnswerCannotBeNullOrWhiteSpace" xml:space="preserve">
+    <value>New password answer cannot be null or white space.</value>
   </data>
 </root>
