Added ReleaseItemExclusive and associated test.

--- a/MongoDB.Web/Resources/ProviderResources.resx
+++ b/MongoDB.Web/Resources/ProviderResources.resx
@@ -201,4 +201,7 @@
   <data name="UserIsNotInRole" xml:space="preserve">
     <value>User is not in role.</value>
   </data>
+  <data name="LockIdMustBeAnObjectId">
+    <value xml:space="preserve">Lock id must be an ObjectId.</value>
+  </data>
 </root>
